--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-        
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-594W9JMKKL"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag() {
+        dataLayer.push(arguments);
+      }
       gtag('js', new Date());
 
       gtag('config', 'G-594W9JMKKL');
-    </script>  
-    
+    </script>
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Nima Mirzaei software developer portfolio"
-    />
+    <meta name="description" content="Nima Mirzaei software developer portfolio" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -35,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Nima M</title>  
+    <title>Nima M</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
