--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Nima Mirzaei software developer portfolio" />
+    <meta name="description" content="Nima Mirzaei software developer site" />
+    <meta property="og:image" content="/media/og-img.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
