hardcoded year updated to get current year

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Nima Mirzaei software developer site" />
-    <meta property="og:image" content="/media/og-img.jpg" />
+
+    <meta property="og:title" content="Nima Mirzaei software developer site" />
+    <meta property="og:image" content="/%PUBLIC_URL%media/og-img.png" />
+    <meta property="og:description" content="Personal bio, hobby software projects, contact me" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
